@@ -1,6 +1,11 @@
 <?xml version="1.0"?>
 <rolemap>
   <permissions>
+    <permission name="Access inactive portal content" acquire="False">
+      <role name="Manager"/>
+      <role name="SectionManager"/>
+      <role name="SectionReviewer"/>
+    </permission>
     <permission name="Add portal content" acquire="False">
       <role name="Manager"/>
       <role name="SectionManager"/>
