@@ -6,7 +6,11 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
--
+- Granted the permission "Access inactive portal content" to the Manager,
+  SectionManager and SectionReviewer in Sections so that those roles are able to
+  access contents with expiration_date in the future and effective_date in the
+  past while using the catalog navigation, cf.
+  CPSDefault.utils.getCatalogFolderContents.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
